--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -11,4 +11,5 @@ jobs:
         uses: actions/checkout@v4
       - run: |
           echo ${{ github.event.client_payload.artifact_url }}
+          echo ${{ github.event.client_payload.repository }}
 
