i hate smart software, github does not run workflows if only whitespace is different in a workflow file. yaml, however, has meaningfull whitespace. facepalm.

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -14,6 +14,9 @@ on:
       artifact_url:
         description: URL where the new (zipped) taxonomypackage lives
         required: true
+      message:
+        required: false
+        default: "Remotely triggerd"
 
 jobs:
   build:
