--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout self
         uses: actions/checkout@v4
       - run: |
-          echo ${{ env.github_actor }} Started an integration run.
+          echo ${{ github.actor }} Started an integration run.
           echo They pushed to ${{ github.event.inputs.repository }}
       - run: |
           echo ${{ github.event.inputs.artifact_url }}
