--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -40,8 +40,11 @@ jobs:
           name: ${{ github.event.inputs.artifact_name }}
           github-token: ${{ secrets.PAT }}
           run-id: ${{ github.event.inputs.run_id }}
-          repository: ${{ github.event.repository }}
-          path: public
+          repository: ${{ github.event.inputs.repository }}
+          path: /tmp
+      - uses: montudor/action-zip@v1
+        with:
+          args: unzip /tmp/${{ github.event.inputs.artifact_name }}.zip public/${{ github.event.inputs.branch }}
       - run: |
           ls -l public
 
