--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -44,7 +44,7 @@ jobs:
           path: /tmp
       - uses: montudor/action-zip@v1
         with:
-          args: unzip /tmp/${{ github.event.inputs.artifact_name }}.zip public/${{ github.event.inputs.branch }}
+          args: unzip /tmp/${{ github.event.inputs.artifact_name }}.zip -d public/${{ github.event.inputs.branch }}
       - run: |
           ls -l public
 
