--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -37,12 +37,13 @@ jobs:
       - name: Downloaad new artifact
         uses: actions/download-artifact@v4
         with:
-          pattern: *
           # name: ${{ github.event.inputs.artifact_name }}
           github-token: ${{ secrets.PAT }}
           run-id: ${{ github.event.inputs.run_id }}
           repository: ${{ github.event.inputs.repository }}
-          path: /tmp
+          path: tmp
+      - run: |
+          ls -l tmp
       - uses: montudor/action-zip@v1
         with:
           args: unzip /tmp/${{ github.event.inputs.artifact_name }}.zip -d public/${{ github.event.inputs.branch }}
