--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -37,9 +37,9 @@ jobs:
       - name: Downloaad new artifact
         uses: actions/download-artifact@v4
         with:
-          # name: ${{ github.event.inputs.artifact_name }}
+          name: ${{ github.event.inputs.artifact_name }}
           github-token: ${{ secrets.PAT }}
-          # run-id: ${{ github.event.inputs.run_id }}
+          run-id: ${{ github.event.inputs.run_id }}
           repository: ${{ github.event.inputs.repository }}
           path: tmp
       - run: |
