--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -38,8 +38,9 @@ jobs:
           echo `pwd`
       - name: Download taxonomy repository
         uses: actions/checkout@v4
-        repository: ${{ github.event.inputs.repository }}
-        path: _tax
+        with:
+          repository: ${{ github.event.inputs.repository }}
+          path: _tax
       - run: |
           ls -l _tax
 
