--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -10,15 +10,12 @@ on:
       repository:
         description: repository name which triggered this event (taxonomy)
         required: true
-      artifact_name:
-        description: Name of the artifact in this repo  (zipped taxonomypackage)
+      taxonomy_name:
+        description: Name of the taxonomypackage
         required: true
       message:
         required: false
         default: "Remotely triggerd"
-      run_id:
-        required: true
-        description: To download the artifact we need a run_id
 
 jobs:
   build:
@@ -44,18 +41,10 @@ jobs:
       - run: |
           ls -l _tax
 
-      - name: Downloaad new artifact
-        uses: actions/download-artifact@v4
-        with:
-          # name: ${{ github.event.inputs.artifact_name }}
-          github-token: ${{ secrets.PAT }}
-          run-id: ${{ github.event.inputs.run_id }}
-          repository: ${{ github.event.inputs.repository }}
-          path: tmp
-      - run: |
-          ls -l tmp
-      - uses: montudor/action-zip@v1
-        with:
-          args: unzip /tmp/${{ github.event.inputs.artifact_name }}.zip -d public/${{ github.event.inputs.branch }}
+      - name: Create package
+        uses: montudor/action-zip@v1
+        with: # recursive, archive name and path without extension, what to archive
+          args: zip -r public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }}  _tax/${{ github.event.inputs.taxonomy_name }}
+
       - run: |
           ls -l public
