--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -40,7 +40,8 @@ jobs:
           path: _tax
       - run: |
           ls -l _tax
-
+      - run: }
+          mkdir -p public/taxonomies/${{ github.event.inputs.branch }}
       - name: Create package
         uses: montudor/action-zip@v1
         with: # recursive, archive name and path without extension, what to archive
