--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -53,5 +53,5 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           add: public
-          author_name: ${{ github.actor }}
+          default_author: github_actions
           message: Updated {{ $github.event.inputs.taxonomy_name }}
