--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -54,4 +54,4 @@ jobs:
         with:
           add: public
           default_author: github_actions
-          message: Updated {{ $github.event.inputs.taxonomy_name }}
+          message: ${{ github.actor }} Updated ${{ github.event.inputs.taxonomy_name }}
