--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -4,16 +4,19 @@ on:
   workflow_dispatch:
     inputs:
       branch:
-        description: branch name to deploy (from _this_ repo)
+        description: branch name to deploy to (_this_ repo) defaults to 'main'
         default: main
         required: true
       repository:
-        description: repository name which triggered this event (taxonomy)
+        description: repository name which triggered this event (taxonomy default 'jenv-tax')
         required: true
+        default: jenv-tax
       taxonomy_name:
-        description: Name of the taxonomypackage
+        description: Name of the taxonomy package
         required: true
+        default: jenv_taxonomy_2024
       message:
+        description: Message to use when we commit taxonomy packages to this repository.
         required: false
         default: "Remotely triggerd"
 
