--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -49,12 +49,23 @@ jobs:
         uses: montudor/action-zip@v1
         with: # recursive, archive name and path without extension, what to archive
           args: zip -r public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }}  _tax/${{ github.event.inputs.taxonomy_name }}
-
+      - id: eplist
+        run: |
+          EP_LIST=`python _tax/scripts/find-entrypoints.py ${{ github.event.inputs.taxonomy_name }}` 
+          echo ep_list=$EP_LIST >> $GITHUB_ENV
       - run: |
           ls -l public/taxonomies/main
+      - run: |
+          echo ${{ env.ep_list }}
+
+      - name: Install Arelle
+        run: |
+          pip install arelle
+          
+
       - name: Update git
         uses: EndBug/add-and-commit@v9
         with:
           add: public
           default_author: github_actions
-          message: ${{ github.actor }} Updated ${{ github.event.inputs.taxonomy_name }}
+          message: ${{ github.event.inputs.message }} [${{ github.actor }} Updated ${{ github.event.inputs.taxonomy_name }}]
