--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -59,7 +59,7 @@ jobs:
 
       - id: eplist
         run: |
-          EP_LIST=`python scripts/find_entrypoints.py public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }}` 
+          EP_LIST=`python scripts/find_entrypoints.py _tax/${{ github.event.inputs.taxonomy_name }}` 
           echo ep_list=$EP_LIST >> $GITHUB_ENV
 #      - id: packagelist
 #        run: |
