--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -33,7 +33,7 @@ jobs:
       - run: |
           echo ${{ github.event.inputs.artifact_name }}
           echo ${{ github.event.inputs.branch }}
-          echo the message is: ${{ github.event.inputs.message }}
+          echo "the message is: ${{ github.event.inputs.message }}"
           echo run-id: ${{ github.event.inputs.run_id }}
       - run: |
           echo `pwd`
@@ -77,4 +77,4 @@ jobs:
         with:
           add: public
           default_author: github_actions
-          message: ${{ github.event.inputs.message }} [${{ github.actor }} Updated ${{ github.event.inputs.taxonomy_name }}]
+          message: "${{ github.event.inputs.message }} [${{ github.actor }} Updated ${{ github.event.inputs.taxonomy_name }}]"
