--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -61,12 +61,13 @@ jobs:
         run: |
           EP_LIST=`python scripts/find_entrypoints.py _tax/${{ github.event.inputs.taxonomy_name }}` 
           echo ep_list=$EP_LIST >> $GITHUB_ENV
-#      - id: packagelist
-#        run: |
-#          PACKAGE_LIST=
-
+      - id: packagelist
+        run: |
+          PACKAGE_LIST=`python scripts/find_packages.py public/taxonomies/${{ github.event.inputs.branch }}`
+          echo package_list=$PACKAGE_LIST >> $GITHUB_ENV
       - run: |
           echo ${{ env.ep_list }}
+          echo ${{ env.package_list }}
 
       - name: Install Arelle
         run: |
