--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -45,8 +45,6 @@ jobs:
           path: _tax
 
       - run: |
-          ls -l _tax
-      - run: |
           mkdir -p public/taxonomies/${{ github.event.inputs.branch }}
 
       - name: Create package
@@ -54,25 +52,24 @@ jobs:
         with: # recursive, archive name and path without extension, what to archive
           args: zip -r public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }}  _tax/${{ github.event.inputs.taxonomy_name }}
 
-      - run: |
-          ls -l public/taxonomies/main
-
       - id: eplist
         run: |
           EP_LIST=`python scripts/find_entrypoints.py _tax/${{ github.event.inputs.taxonomy_name }}` 
           echo ep_list=$EP_LIST >> $GITHUB_ENV
+
       - id: packagelist
         run: |
           PACKAGE_LIST=`python scripts/find_packages.py public/taxonomies/${{ github.event.inputs.branch }}`
           echo package_list=$PACKAGE_LIST >> $GITHUB_ENV
-      - run: |
-          echo ${{ env.ep_list }}
-          echo ${{ env.package_list }}
 
       - name: Install Arelle
         run: |
           pip install arelle
           
+      - id: taxtest
+        run: |
+          arelleCmdLine --packages "${{ env.package_list }}"  --validate --file "${{ env.ep_list }}"
+
       - name: Update git
         uses: EndBug/add-and-commit@v9
         with:
