where is Arelle?

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -40,6 +40,7 @@ jobs:
       - name: Install Arelle
         run: |
           pip install arelle
+          pip show arelle
 
       - name: Download taxonomy repository
         uses: actions/checkout@v4
