--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -56,8 +56,7 @@ jobs:
         uses: montudor/action-zip@v1
 
       - name: Create package
-        run: zip -r public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }} ${{ github.event.inputs.taxonomy_name }}
-        working-directory: _tax
+        run: cd _taz; zip -r public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }} ${{ github.event.inputs.taxonomy_name }}; cd ..
 
       - run: ls -l public/taxonomies/main
       - run: mkdir _what; cd _what; unzip public/taxonomies/main/rj*zip; lc -l ; cd ..
