--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -59,7 +59,7 @@ jobs:
         run: cd _tax; zip -r ../public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }} ${{ github.event.inputs.taxonomy_name }}; cd ..
 
       - run: ls -l public/taxonomies/main
-      - run: mkdir _what; cd _what; unzip public/taxonomies/main/rj*zip; lc -l ; cd ..
+      - run: mkdir _what; cd _what; unzip public/taxonomies/main/rj*; lc -l ; cd ..
 
       - id: eplist
         run: |
