--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -56,10 +56,10 @@ jobs:
         uses: montudor/action-zip@v1
 
       - name: Create package
-        run: cd _tax; zip -r ../public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }} ${{ github.event.inputs.taxonomy_name }}; cd ..
+        run: cd _tax && zip -r ../public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }} ${{ github.event.inputs.taxonomy_name }}
 
       - run: ls -l public/taxonomies/main
-      - run: mkdir _what; cd _what; unzip ../public/taxonomies/main/rj*; lc -l ; cd ..
+      - run: mkdir _what && cd _what && unzip ../public/taxonomies/main/rj* && lc -l
 
       - id: eplist
         run: |
