--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -35,8 +35,7 @@ jobs:
           echo ${{ github.event.inputs.branch }}
           echo "the message is: ${{ github.event.inputs.message }}"
           echo run-id: ${{ github.event.inputs.run_id }}
-      - run: |
-          echo `pwd`
+
       - name: Install Arelle
         run: |
           pip install arelle-release
@@ -56,9 +55,6 @@ jobs:
       - name: Create package
         run: cd _tax && pwd && zip -r ../public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }} ${{ github.event.inputs.taxonomy_name }}
 
-      - run: ls -l public/taxonomies/main
-      - run: mkdir _what && cd _what && unzip ../public/taxonomies/main/rj* && ls -l
-
       - id: eplist
         run: |
           EP_LIST=`python scripts/find_entrypoints.py _tax/${{ github.event.inputs.taxonomy_name }}` 
@@ -73,6 +69,7 @@ jobs:
         run: |
           arelleCmdLine --packages "${{ env.package_list }}"  --validate --file "${{ env.ep_list }}"
 
+      # This should be the last action, after committing the package, the website will be published
       - name: Update git
         uses: EndBug/add-and-commit@v9
         with:
