--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -67,7 +67,7 @@ jobs:
 
       - id: taxtest
         run: |
-          arelleCmdLine --packages "${{ env.package_list }}"  --validate --file "${{ env.ep_list }} --logFile=arelle.log --logLevel=warning"
+          arelleCmdLine --packages "${{ env.package_list }}"  --validate --file "${{ env.ep_list }}" --logFile=arelle.log --logLevel=warning
 
       - id: check_arelle
         name: Check for errors while testing the taxonomy
