workflow: - een branchnaam is een adresseerbare 'ref' so let's use it.
lokaal:
- more 'help'
- clone branch instead of 'main/master'
- do we switch branch as well if <branch_name> !== <current>? Dilemma
- als we een nieuwe branchnaam/packagenaam te pakken hebben, dan lokale git repo vergewissen van dit heugelijke feit. (denkend aan het vorige dilemma, alleen als <current> == <branch_name>?)

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: Checkout self
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch }}
 
       - run: |
           echo ${{ github.actor }} Started an integration run.
@@ -47,6 +49,7 @@ jobs:
         with:
           repository: ${{ github.event.inputs.repository }}
           path: _tax
+          ref: ${{ github.event.inputs.branch }}
 
       - run: |
           mkdir -p public/taxonomies/${{ github.event.inputs.branch }}
