--- a/scripts/config.sh.sample
+++ b/scripts/config.sh.sample
@@ -6,4 +6,4 @@
 # Die moeten bij elkaar in een bij elkaar in een directory staan
 # hier geef je aan welke. (${HOME} vertaalt zich als /home/<gebruikersnaam>)
 
-local_taxonomy_dir="${HOME}/develop/taxoos/"
+local_taxonomy_dir="${HOME}/develop/taxoos"
