--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -110,9 +110,17 @@ jobs:
           git add public/index.html
 
       # This should be the last action, after committing the package, the website will be published
-      - name: Update git
-        uses: EndBug/add-and-commit@v9
+      # We want another  workflow to run,
+      # normally you can't trigger workflows from worflow (commits) with the default github.token
+      - name: Commit files
+        run: |
+            git config --local user.email "github-actions[bot]@users.noreply.github.com"
+            git config --local user.name "github-actions[bot]"
+            git tag -d $GITHUB_REF_NAME
+            git tag $GITHUB_REF_NAME
+            git commit -a -m "Add changes"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
         with:
-          add: public
-          default_author: github_actor
-          message: "${{ github.event.inputs.message }} [${{ github.actor }} Updated ${{ github.event.inputs.taxonomy_name }}]"
+          github_token: ${{ secrets.PAT }}
