--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -116,9 +116,7 @@ jobs:
         run: |
             git config --local user.email "github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
-            git tag -d $GITHUB_REF_NAME
-            git tag $GITHUB_REF_NAME
-            git commit -a -m "Add changes"
+            git commit -a -m "Add changes to taxonomy packages"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
