--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -112,7 +112,6 @@ jobs:
       # This should be the last action, after committing the package, the website will be published
       # We want another  workflow to run,
       # normally you can't trigger workflows from worflow (commits) with the default github.token
-      # So now github won't refresh this workflow?
       - name: Commit files
         run: |
             git config --local user.email "github-actions[bot]@users.noreply.github.com"
@@ -123,3 +122,17 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.PAT }}
+
+    # Well that won't trigger the deployment as well.
+    # Last resort, ping self?
+      - name: Ping Deployment
+        run: |
+          type="trigger-workflow"
+          
+          curl -L \
+            -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.PAT }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/xiffy/sbr.nl-web/actions/workflows/static.yaml/dispatches \
+          -d '{"ref":"${{ github.ref }}"}'
