I'm having deja vu's. but it's alright

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: remove old package (if any)
         continue-on-error: true
         run: |
-            rm public/taxonomies/${{ github.event.inputs.branch }}/taxonomies/${{ github.event.inputs.taxonomy_name }}.zip 2>/dev/null
+            rm public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }}.zip 2>/dev/null
 
       - name: Create package
         run: cd _tax/taxonomies && pwd && zip -r ../../public/taxonomies/${{ github.event.inputs.branch }}/${{ github.event.inputs.taxonomy_name }} ${{ github.event.inputs.taxonomy_name }}
@@ -107,7 +107,6 @@ jobs:
       - name: Create html-index
         run: |
           python scripts/html_index.py > public/index.html
-          git add public/index.html
 
       # This should be the last action, after committing the package, the website will be published
       # We want another  workflow to run,
