--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -104,6 +104,21 @@ jobs:
         run: |
           echo "How are you going to use the emergency exit without a your space helmet Dave?"
 
+      - id: ep_as_html
+        name: Create HTML representation of the found entrypoints
+        run: |
+          IFS_SAVE="$IFS"   # field-seperator to 
+          IFS='|'
+          for ep_ in $ep; do
+            filename=`basename ${ep_}`
+            echo "Creating html: ${filename} "
+            arelleCmdLine --packages "${packages}" --file "${ep_}" \
+                          --pre="public/taxonomies/${branch}/pre_${filename}.html" \
+                          --dim="public/taxonomies/${branch}/dim_${filename}.html" \
+                          --labelLang=nl
+          done
+          IFS="$IFS_SAVE"
+
       - name: Create html-index
         run: |
           python scripts/html_index.py > public/index.html
