--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -110,11 +110,11 @@ jobs:
           IFS_SAVE="$IFS"   # field-seperator to 
           IFS='|'
           for ep in "${{ env.ep_list }}"; do
-            filename=`basename ${ep_}`
+            filename=`basename ${ep}`
             echo "Creating html: ${filename} "
             arelleCmdLine --packages "${{ env.package_list }}" --file "${ep}" \
-                          --pre="public/taxonomies/${{ github.event.inputs.branch }}/pre_${filename}-nl.html" \
-                          --dim="public/taxonomies/${{ github.event.inputs.branch }}/dim_${filename}-nl.html" \
+                          --pre="public/taxonomies/${{ github.event.inputs.branch }}/pre_${{ filename }}-nl.html" \
+                          --dim="public/taxonomies/${{ github.event.inputs.branch }}/dim_${{ filename }}-nl.html" \
                           --labelLang=nl
           done
           IFS="$IFS_SAVE"
